2001-03-22  Joerg Brunsmann <joerg_brunsmann@yahoo.de>

	* javax/naming/Context.java (SECURITY_CREDENTIALS): Fix typo.

2001-03-22  Marcus G. Daniels  <mgd@swarm.org>

	* jni.cc (add_char): Handle `.' like `/'.

2001-03-22  Bryce McKinlay  <bryce@albatross.co.nz>

	* java/lang/reflect/Method.java (getExceptionTypes): Call getType() to
	initialize if exception_types is null.
	* java/lang/reflect/Constructor.java: Likewise.
	* java/lang/reflect/natConstructor.cc (getType): Initialize 
	exception_types to an empty Object array.

2001-03-21  Tom Tromey  <tromey@redhat.com>

	* configure: Rebuilt.
	* configure.in (GCJFLAGS): Subst.
	* Makefile.in: Rebuilt.
	* Makefile.am (jv_convert_LDFLAGS): Added -shared-libgcc.
	(gij_LDFLAGS): Likewise.
	(JC1FLAGS): Added GCJFLAGS and removed -g.

	* java/io/natFileDescriptorPosix.cc (open): Add O_CREAT in
	read/write case.  Fixes PR libgcj/2338.

2001-03-20  Warren Levy  <warrenl@redhat.com>

	* java/util/TimeZone.java: Sync up with Classpath.  Includes new
	and corrected SimpleTimeZone's for the timezones hash table.

2001-03-19  Per Bothner  <per@bothner.com>

	* java/net/URLStreamHandler.java (parseURL):  Fix bug which would
	"canonicalize" "../../xxx" to "/xxx".

2001-03-19  Mark Wielaard <mark@klomp.org>

	* java/util/ArrayList.java: Remove RCS keywords from comments
	* java/util/BasicMapEntry.java: idem
	* java/util/Dictionary.java: idem
	* java/util/HashSet.java: idem

	* java/util/EventObject.java: reindent
	* java/util/Properties.java: idem
	* java/util/SortedMap.java: idem

	* java/util/Enumeration.java: Merge with Classpath
	* java/util/EventListener.java: idem
	* java/util/Observable.java: idem
	* java/util/Observer.java: idem
	* java/util/Stack.java: idem

2001-03-17  Tom Tromey  <tromey@redhat.com>

	* java/lang/natString.cc (rehash): Don't bother with memset;
	_Jv_AllocBytes returns zero'd memory.  Use _Jv_AllocBytesChecked.
	Use UNMASK_PTR.
	(UNMASK_PTR): New macro.